# Offline-First-Multi-Agent-Autonomy-SDK

./: .gitattributes  .gitlab-ci.yml  ADVANCED_FEATURES_SUMMARY.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CI_CD_PIPELINE_SPEC.md  COMPLETE_PROJECT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO_SIMULATION_SPEC.md  DOCUMENTATION_PLAN.md  Dockerfile.dashboard  FINAL_PROJECT_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SPEC.md  LICENSE  MESH_TRANSPORT_SPEC.md  Makefile  NOTICE  PLAN_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SETUP.md  PYTHON_BINDINGS_SPEC.md  README.md  SESSION_5_SUMMARY.md  SESSION_SUMMARY_2026-03-27.md  STATE_SYNC_SPEC.md  docker-compose.yml  python-requirements.txt
.github/workflows/: benchmarks.yml  cd.yml  ci.yml  coverage.yml  docs.yml  publish.yml  security.yml
crates/abac-integration/: Cargo.toml
crates/abac-integration/src/: error.rs  evaluator.rs  integration.rs  lib.rs  model.rs  policy.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  fault_tolerance.rs  integration.rs  lib.rs
crates/agent-lifecycle/: Cargo.toml
crates/agent-lifecycle/src/: error.rs  health.rs  lib.rs  manager.rs  registry.rs  state.rs
crates/agent-package-management/: Cargo.toml
crates/agent-package-management/src/: cache.rs  error.rs  installer.rs  lib.rs  manager.rs  repository.rs  resolver.rs  types.rs
crates/api-integration/: Cargo.toml
crates/api-integration/src/: error.rs  graphql.rs  grpc.rs  lib.rs  rest.rs  websocket.rs
crates/auction-mechanism/: Cargo.toml
crates/auction-mechanism/src/: engine.rs  error.rs  lib.rs  resource_auction.rs  types.rs
crates/audit/: Cargo.toml
crates/audit-log/: Cargo.toml
crates/audit/src/: backend.rs  error.rs  event.rs  lib.rs  logger.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs
crates/autoscaling/: Cargo.toml
crates/autoscaling/src/: advanced_scaling.rs  controller.rs  error.rs  lib.rs  metrics.rs  policy.rs  scaler.rs
crates/backup-restore/: Cargo.toml
crates/backup-restore/src/: error.rs  lib.rs
crates/blockchain/: Cargo.toml
crates/blockchain-consensus/: Cargo.toml
crates/blockchain-consensus/src/: block.rs  chain.rs  error.rs  lib.rs  pos.rs  validator.rs
crates/blockchain/src/: consensus.rs  lib.rs
crates/bounded-consensus/: Cargo.toml
crates/bounded-consensus/benches/: consensus_bench.rs
crates/bounded-consensus/src/: lib.rs  paxos.rs
crates/cache/: Cargo.toml
crates/cache/src/: invalidation.rs  lib.rs  lock.rs  metrics.rs  store.rs
crates/chaos-engineering/: Cargo.toml
crates/chaos-engineering/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: agent.rs  config.rs  mod.rs  system.rs  task.rs  workflow.rs
crates/cloud-integration/: Cargo.toml
crates/cloud-integration/src/: adapter.rs  aws.rs  azure.rs  lib.rs  mqtt.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  metrics.rs  types.rs  utils.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: error.rs  lib.rs  loader.rs  manager.rs  schema.rs  validator.rs  versioning.rs  watch.rs
crates/container-integration/: Cargo.toml
crates/container-integration/src/: container.rs  containerd.rs  docker.rs  error.rs  image.rs  lib.rs  manager.rs  types.rs
crates/dashboard/: Cargo.toml  README.md
crates/dashboard/assets/: styles.css
crates/dashboard/examples/: dashboard_server.rs
crates/dashboard/src/: api.rs  components.rs  lib.rs  metrics.rs  models.rs  rate_limit.rs  services.rs  websocket.rs
crates/dashboard/src/components/: metrics_charts.rs  network_visualizer.rs  task_details.rs
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/src/: extract.rs  lib.rs  load.rs  quality.rs  transform.rs
crates/data-quality/: Cargo.toml
crates/data-quality/src/: anomaly.rs  error.rs  lib.rs  manager.rs  metrics.rs  rules.rs  validation.rs
crates/data-versioning/: Cargo.toml
crates/data-versioning/src/: error.rs  integration.rs  lib.rs  lineage.rs  manager.rs  version.rs
crates/database/: Cargo.toml
crates/database-integration/: Cargo.toml
crates/database/src/: lib.rs  migrations.rs  models.rs  repository.rs
crates/dependency-graph/: Cargo.toml
crates/dependency-graph/examples/: dependency_example.rs
crates/dependency-graph/src/: error.rs  event.rs  graph.rs  lib.rs  scheduler.rs
crates/digital-twin/: Cargo.toml
crates/distributed-cache/: Cargo.toml
crates/distributed-cache/src/: distributed.rs  error.rs  item.rs  lib.rs  local.rs  policy.rs
crates/distributed-debugger/: Cargo.toml
crates/edge-ai/: Cargo.toml
docs/: CLI_REFERENCE.md  DEPLOYMENT_GUIDE.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY_V3.md  IMPLEMENTATION_SUMMARY_V2.md  KUBERNETES_OPERATOR_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PLUGIN_DEVELOPMENT_GUIDE.md  PROJECT_COMPLETE_22_SESSIONS.md  PROJECT_COMPLETE_FINAL.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_COMPLETE_V2.md  PROJECT_COMPLETE_V5.md  PROJECT_GRAND_FINAL_SUMMARY.md  PROJECT_GRAND_FINAL_V2.md  PROJECT_SUMMARY_SESSION_19.md  PROJECT_ULTIMATE_SUMMARY.md  SYSTEM_ARCHITECTURE.md  ULTIMATE_PROJECT_SUMMARY_V2.md  WASM_GUIDE.md
examples/: abac_demo.rs  advanced_differential_privacy_demo.rs  advanced_scaling_demo.rs  comprehensive_demo.rs  comprehensive_integration_demo.rs  configuration.yaml  configuration_versioning_demo.rs  data_lineage_demo.rs  digital_twin_demo.rs  distributed_logging_analysis_demo.rs  distributed_performance_analysis_demo.rs  distributed_tracing_demo.rs  federated_learning_demo.rs  infrastructure_orchestration_demo.rs  load_balancing_demo.rs  ml_ab_testing_demo.rs  multi_agent_demo.rs  python_demo.py  resource_auction_demo.rs  secrets_management_demo.rs  simple_sync.rs  swarm_simulation.rs  web_monitor.rs
kubernetes/: deployment.yaml
mobile-dashboard/: App.tsx  package.json
monitoring/: prometheus.yml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
scripts/: local_test.sh  run_integration_tests.sh
(+383 files in other folders)
