[workspace]
members = [
    "crates/mesh-transport",
    "crates/state-sync",
    "crates/agent-core",
    "crates/common",
    "crates/local-planner",
    "crates/resource-monitor",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"