[workspace]
members = [
    "crates/mesh-transport",
    "crates/state-sync",
    "crates/agent-core",
    "crates/common",
    "crates/local-planner",
    "crates/resource-monitor",
    "crates/bounded-consensus",
    "crates/distributed-planner",
    "crates/swarm-simulator",
    "crates/ros2-adapter",
    "crates/distributed-kv",
    "crates/iot-interface",
    "crates/rl-planner",
    "crates/blockchain-consensus",
    "crates/k8s-operator",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
lazy_static = "1.4"
serde_cbor = "0.11"
flate2 = { version = "1.0", features = ["zlib"] }
warp = "0.3"
prometheus = "0.13"
serde_json = "1.0"
criterion = "0.5"