[workspace]
members = [
    "crates/mesh-transport",
    "crates/state-sync",
    "crates/agent-core",
    "crates/common",
    "crates/local-planner",
    "crates/resource-monitor",
    "crates/bounded-consensus",
    "crates/distributed-planner",
    "crates/swarm-simulator",
    "crates/ros2-adapter",
    "crates/distributed-kv",
    "crates/iot-interface",
    "crates/rl-planner",
    "crates/blockchain-consensus",
    "crates/k8s-operator",
    "crates/configuration",
    "crates/streaming",
    "crates/dashboard",
    "crates/edge-computing",
    "crates/audit",
    "crates/ota-updates",
    "crates/federated-learning",
    "crates/digital-twin",
    "crates/quantum-computing",
    "crates/power-management",
    "crates/dependency-graph",
    "crates/autoscaling",
    "crates/monitoring-integration",
    "crates/data-versioning",
    "crates/distributed-cache",
    "crates/database-integration",
    "crates/rbac",
    "crates/distributed-debugger",
    "crates/agent-lifecycle",
    "crates/geospatial",
    "crates/auction-mechanism",
    "crates/knowledge-graph",
    "crates/api-integration",
    "crates/ml-model-versioning",
    "crates/event-driven",
    "crates/backup-restore",
    "crates/agent-package-management",
    "crates/container-integration",
    "crates/security-configuration",
    "crates/distributed-logging",
    "crates/hardware-acceleration",
    "crates/partition-recovery",
    "crates/infrastructure-integration",
    "crates/data-quality",
    "crates/workflow-orchestration",
    "crates/incident-management",
    "crates/metadata-management",
    "crates/abac-integration",
    "crates/secrets-management",
    "crates/load-balancer",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"
lazy_static = "1.4"
serde_cbor = "0.11"
flate2 = { version = "1.0", features = ["zlib"] }
warp = "0.3"
prometheus = "0.13"
serde_json = "1.0"
criterion = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }