[package]
name = "offline-first-autonomy-python"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the Offline‑First Multi‑Agent Autonomy SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/Offline-First-Multi-Agent-Autonomy-SDK"

[lib]
name = "offline_first_autonomy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
pyo3-asyncio = { version = "0.21", features = ["tokio-runtime"] }
tokio = { version = "1.38", features = ["full"] }
common = { path = "../crates/common" }
mesh-transport = { path = "../crates/mesh-transport" }
state-sync = { path = "../crates/state-sync" }
agent-core = { path = "../crates/agent-core" }

[profile.release]
opt-level = 3
lto = true