[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "offline_first_autonomy"
version = "0.1.0"
description = "Python bindings for Offline‑First Multi‑Agent Autonomy SDK"
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
module-name = "offline_first_autonomy"
bindings = "pyo3"