[package]
name = "abac-integration"
version = "0.1.0"
edition = "2021"
description = "Attribute‑Based Access Control (ABAC) integration for offline‑first multi‑agent systems"
license = "BSD-3-Clause"
authors = ["Resilient Systems Engineering Group, Inc"]
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
regex = "1.10"

# Internal dependencies
common = { path = "../common", version = "0.3.0" }
rbac = { path = "../rbac", version = "0.3.0", optional = true }
metadata-management = { path = "../metadata-management", version = "0.3.0", optional = true }

[features]
default = []
rbac = ["rbac"]
metadata = ["metadata-management"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"