[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
common = { path = "../common" }
mesh-transport = { path = "../mesh-transport" }
state-sync = { path = "../state-sync" }