[package]
name = "agent-core"
version = "0.2.0"
edition = "2021"
description = "Core agent logic for offline‑first multi‑agent systems (lifecycle, message routing, coordination)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/Offline-First-Multi-Agent-Autonomy-SDK"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
common = { path = "../common" }
mesh-transport = { path = "../mesh-transport" }
state-sync = { path = "../state-sync" }
iot-interface = { path = "../iot-interface", optional = true }

[features]
default = []
iot = ["iot-interface"]