[package]
name = "agent-lifecycle"
version = "0.1.0"
edition = "2021"
description = "Agent lifecycle management for offline-first multi-agent systems"
license = "MIT OR Apache-2.0"
authors = ["Offline-First Multi-Agent Autonomy SDK Contributors"]
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }

# Internal dependencies
common = { path = "../common" }
mesh-transport = { path = "../mesh-transport" }
agent-core = { path = "../agent-core" }
resource-monitor = { path = "../resource-monitor" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }