[package]
name = "agent-package-management"
version = "0.1.0"
edition = "2021"
description = "Package management system for agent capabilities and dependencies"
license = "MIT OR Apache-2.0"
authors = ["Offline-First Multi-Agent Autonomy SDK Contributors"]
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
semver = "1.0"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = { workspace = true }
walkdir = "2.4"
tempfile = "3.8"
reqwest = { version = "0.12", optional = true }
url = "2.5"

# Internal dependencies
common = { path = "../common" }
mesh-transport = { path = "../mesh-transport", optional = true }
distributed-kv = { path = "../distributed-kv", optional = true }
event-driven = { path = "../event-driven", optional = true }

[features]
default = []
network = ["dep:reqwest", "dep:mesh-transport"]
distributed = ["dep:distributed-kv"]
events = ["dep:event-driven"]
full = ["network", "distributed", "events"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"