[package]
name = "audit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Audit logging and journaling for the Offline‑First Multi‑Agent Autonomy SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[features]
default = ["elasticsearch", "loki"]
elasticsearch = ["elasticsearch-rs"]
loki = ["reqwest", "serde_json"]
compression = ["flate2", "lz4"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
elasticsearch-rs = { version = "8.0", optional = true }
reqwest = { version = "0.11", optional = true }
flate2 = { version = "1.0", optional = true }
lz4 = { version = "1.24", optional = true }

# Internal dependencies
common = { path = "../common", version = "0.3" }
mesh-transport = { path = "../mesh-transport", version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
tempfile = "3.0"