[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization for the SDK"
license = "MIT OR Apache-2.0"

[dependencies]
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }

# Internal
database = { path = "../database", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"
