[package]
name = "backup-restore"
version = "0.1.0"
edition = "2021"
description = "Backup and restore mechanism for distributed agent state"
license = "MIT OR Apache-2.0"
authors = ["Offline-First Multi-Agent Autonomy SDK Contributors"]
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
flate2 = { workspace = true }
tar = "0.4"
walkdir = "2.4"
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"
indicatif = { version = "0.17", optional = true }

# Internal dependencies
common = { path = "../common" }
distributed-kv = { path = "../distributed-kv", optional = true }
state-sync = { path = "../state-sync", optional = true }
data-versioning = { path = "../data-versioning", optional = true }

[features]
default = []
distributed = ["dep:distributed-kv", "dep:state-sync"]
versioned = ["dep:data-versioning"]
progress = ["dep:indicatif"]
full = ["distributed", "versioned", "progress"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"