[package]
name = "blockchain-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Proof‑of‑stake blockchain consensus for multi‑agent systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
bounded-consensus = { path = "../bounded-consensus" }
mesh-transport = { path = "../mesh-transport" }
common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"