[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
description = "Blockchain integration for decentralized consensus"
license = "MIT OR Apache-2.0"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"

# Internal dependencies
common = { path = "../common", version = "0.3.0" }

[dev-dependencies]
ethers-contract-abigen = "2.0"
