[package]
name = "sdk-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Multi-Agent SDK"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sdk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Internal dependencies
common = { path = "../common", version = "0.3.0" }
database = { path = "../database", version = "0.1.0" }
