[package]
name = "common"
version = "0.2.0"
edition = "2021"
description = "Shared types and utilities for the offline‑first multi‑agent SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/Offline-First-Multi-Agent-Autonomy-SDK"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }