[package]
name = "container-integration"
version = "0.1.0"
edition = "2021"
description = "Integration with container runtimes (Docker, containerd) for agent deployment"
license = "MIT OR Apache-2.0"
authors = ["Offline-First Multi-Agent Autonomy SDK Contributors"]
repository = "https://github.com/your-org/Offline-First-Multi-Agent-Autonomy-SDK"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Container runtime dependencies
bollard = { version = "0.16", optional = true, features = ["tokio"] }
containerd-client = { version = "0.3", optional = true }
oci-spec = { version = "0.6", optional = true }
tar = "0.4"
flate2 = { workspace = true }
tempfile = "3.8"

# Internal dependencies
common = { path = "../common" }
agent-core = { path = "../agent-core", optional = true }
mesh-transport = { path = "../mesh-transport", optional = true }

[features]
default = []
docker = ["dep:bollard"]
containerd = ["dep:containerd-client", "dep:oci-spec"]
full = ["docker", "containerd", "agent-core", "mesh-transport"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"