[package]
name = "data-pipeline"
version = "0.1.0"
edition = "2021"
description = "Data pipeline and ETL/ELT processing for the Multi-Agent SDK"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
arrow = "50"
parquet = "50"
csv = "1.3"

# Internal dependencies
common = { path = "../common", version = "0.3.0" }
stream-processing = { path = "../stream-processing", version = "0.1.0" }
